components/recipes/recipe-list.module.css
.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 20px;
}

.title {
    font-size: 30px;
    font-size: bold;
    color: #333;
    margin-bottom: 20px;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.iconsCol {
    display: flex;
    font-size: 15px;
    background-color:white;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}

.iconsCol1 {
    flex: 1;
}

.iconsCol2 {
    flex: 1;
}

.recipeOptions {
    display: flex;
    justify-content: space-between;
}

.viewRecipe {
    margin: 0;
}

.cardTitle {
    font-size: 20px;
    color: #414040;
    margin: 0;
    margin-bottom: 10px;
    font-weight: bold;
}

.highlight{
    font-size: large;
    color: rgb(255, 0, 0);
}

.cardContainer {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
}
.cardCategory {
    color: #565555;
    word-spacing: 5px;
    align-items: center;
    margin: 5px;
}
.cardCategory span {
    margin-left: 5px;
    font-size:large;
}

.cardCategory svg {
    margin-right: 10px;
    fill: #565555; 
}

.card {
    border: 1px solid #ccc;
    border-radius: 5px;
    box-shadow: 2px 2px 2px rgba(168, 245, 213, 0.6);
    background-color: whitesmoke;
    width: 340px;
    padding: 10px;
}

.card:hover {
    transform: scale(1.02);
}

.cardImageContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    
}

.cardImage {
    max-width: 100%;
    max-height: 200px;
    object-fit: cover;
    border-radius: 5px;
}

.cardContent {
    padding: 10px;
}

.cardDescription {
    color: #100E0E;
}

.cardCategory {
    color: #565555;
}
.favHeart {
    padding-left: 250px;
}

/*pagination */

.pagination {
  display: flex;
  justify-content: center;
  margin-top: 20px;
  color:green;
}

.pagination span {
  cursor: pointer;
  padding: 5px 10px;
  margin: 0 5px;
  border: 1px solid #ccc;
  border-radius: 4px;
  transition: background-color 0.3s;
}

.pagination span:hover {
  background-color: #ddd;
}

.pagination span.active {
  background-color: #4caf50;
  color: white;
}

